코딩 규약 수정