@@ -27,6 +27,7 @@ import javax.servlet.http.HttpServletResponse;
 import java.io.*;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
@@ -57,10 +58,9 @@ public class LayerRestController implements AuthorizationController {
 		Map<String, Object> result = new HashMap<>();
 		String errorCode = null;
 		String message = null;
-		String geoserverLayerJson = null;
-		
+
 		GeoPolicy geoPolicy = geoPolicyService.getGeoPolicy();
-		geoserverLayerJson = layerService.getListGeoserverLayer(geoPolicy);
+		String geoserverLayerJson = layerService.getListGeoserverLayer(geoPolicy);
 		int statusCode = HttpStatus.OK.value();
 
 		result.put("statusCode", statusCode);
@@ -209,7 +209,7 @@ public class LayerRestController implements AuthorizationController {
 					// 파일 기본 validation 체크
 					errorCode = fileValidate(policy, multipartFile);
 					if (!StringUtils.isEmpty(errorCode)) {
-						statusCode = HttpStatus.BAD_REQUEST.value();
+						result.put("statusCode", HttpStatus.BAD_REQUEST.value());
 						result.put("errorCode", errorCode);
 						return result;
 					}
@@ -217,7 +217,7 @@ public class LayerRestController implements AuthorizationController {
 					String originalName = multipartFile.getOriginalFilename();
 					String[] divideFileName = originalName.split("\\.");
 					String extension = null;
-					if (divideFileName != null && divideFileName.length != 0) {
+					if (divideFileName.length != 0) {
 						extension = divideFileName[divideFileName.length - 1];
 						if (LayerFileInfo.ZIP_EXTENSION.equalsIgnoreCase(extension)) {
 							log.info("@@@@@@@@@@@@ upload.file.type.invalid");
@@ -232,7 +232,7 @@ public class LayerRestController implements AuthorizationController {
 					try (	InputStream inputStream = multipartFile.getInputStream();
 							OutputStream outputStream = new FileOutputStream(makedDirectory + saveFileName)) {
 
-						int bytesRead = 0;
+						int bytesRead;
 						byte[] buffer = new byte[BUFFER_SIZE];
 						while ((bytesRead = inputStream.read(buffer, 0, BUFFER_SIZE)) != -1) {
 							size += bytesRead;
@@ -453,7 +453,7 @@ public class LayerRestController implements AuthorizationController {
                     String originalName = multipartFile.getOriginalFilename();
                     String[] divideFileName = originalName.split("\\.");
                     String extension = null;
-                    if(divideFileName != null && divideFileName.length != 0) {
+                    if(divideFileName.length != 0) {
                         extension = divideFileName[divideFileName.length - 1];
                         if(LayerFileInfo.ZIP_EXTENSION.equalsIgnoreCase(extension)) {
                             log.info("@@@@@@@@@@@@ upload.file.type.invalid");
@@ -468,7 +468,7 @@ public class LayerRestController implements AuthorizationController {
                     try (	InputStream inputStream = multipartFile.getInputStream();
                             OutputStream outputStream = new FileOutputStream(makedDirectory + saveFileName)) {
 
-                    	int bytesRead = 0;
+                    	int bytesRead;
 						byte[] buffer = new byte[BUFFER_SIZE];
 						while ((bytesRead = inputStream.read(buffer, 0, BUFFER_SIZE)) != -1) {
 							size += bytesRead;
@@ -698,7 +698,7 @@ public class LayerRestController implements AuthorizationController {
 
             File zipFile = new File(zipFileName);
             try(	BufferedInputStream in = new BufferedInputStream(new FileInputStream(zipFile));
-                    BufferedOutputStream out = new BufferedOutputStream(response.getOutputStream());) {
+                    BufferedOutputStream out = new BufferedOutputStream(response.getOutputStream())) {
 
                 FileCopyUtils.copy(in, out);
                 out.flush();
@@ -750,9 +750,8 @@ public class LayerRestController implements AuthorizationController {
     	Map<String, Object> result = new HashMap<>();
 		String errorCode = null;
 		String message = null;
-		LayerFileInfo layerFileInfo = new LayerFileInfo();
-    	
-        layerFileInfo = layerFileInfoService.getLayerFileInfo(layerFileInfoId);
+
+		LayerFileInfo layerFileInfo = layerFileInfoService.getLayerFileInfo(layerFileInfoId);
         log.info("@@@@@@@@@@@@@@@@@@@@@@@@@@ layerFileInfo = {}", layerFileInfo);
         int statusCode = HttpStatus.OK.value();
 
@@ -770,9 +769,9 @@ public class LayerRestController implements AuthorizationController {
 
 	/**
 	 * 업로딩 파일을 압축 해제
-	 * TODO 여기 Exception을 던지면 안될거 같음. 수정 필요
+	 * 	 * TODO 여기 Exception을 던지면 안될거 같음. 수정 필요
 	 * @param policy
-	 * @param groupFileName layer 의 경우 한 세트가 같은 이름에 확장자만 달라야 함
+	 * @param groupFileName groupFileName layer 의 경우 한 세트가 같은 이름에 확장자만 달라야 함
 	 * @param multipartFile
 	 * @param shapeEncoding
 	 * @param targetDirectory
@@ -796,7 +795,7 @@ public class LayerRestController implements AuthorizationController {
         File uploadedFile = new File(tempDirectory + multipartFile.getOriginalFilename());
         multipartFile.transferTo(uploadedFile);
 
-        try ( ZipFile zipFile = new ZipFile(uploadedFile);) {
+        try ( ZipFile zipFile = new ZipFile(uploadedFile)) {
             String directoryPath = targetDirectory;
             Enumeration<? extends ZipEntry> entries = zipFile.entries();
             while( entries.hasMoreElements() ) {
@@ -808,14 +807,12 @@ public class LayerRestController implements AuthorizationController {
                     File file = new File(unzipfileName);
                     file.mkdirs();
                 } else {
-                    String fileName = null;
                     String extension = null;
-                    String[] divideFileName = null;
                     String saveFileName = null;
 
-                    fileName = entry.getName();
-                    divideFileName = fileName.split("\\.");
-                    if(divideFileName != null && divideFileName.length != 0) {
+					String fileName = entry.getName();
+					String[] divideFileName = fileName.split("\\.");
+                    if(divideFileName.length != 0) {
                         extension = divideFileName[divideFileName.length - 1];
                         saveFileName = groupFileName + "." + extension;
                         log.info("--------- unzip saveFileName = {}", saveFileName);
@@ -823,8 +820,8 @@ public class LayerRestController implements AuthorizationController {
 
                     long size = 0L;
                     try ( 	InputStream inputStream = zipFile.getInputStream(entry);
-                            FileOutputStream outputStream = new FileOutputStream(targetDirectory + saveFileName); ) {
-                    	int bytesRead = 0;
+                            FileOutputStream outputStream = new FileOutputStream(targetDirectory + saveFileName) ) {
+                    	int bytesRead;
                         byte[] buffer = new byte[BUFFER_SIZE];
                         while ((bytesRead = inputStream.read(buffer, 0, BUFFER_SIZE)) != -1) {
                             size += bytesRead;
@@ -908,7 +905,7 @@ public class LayerRestController implements AuthorizationController {
         // 4 파일 사이즈
         long fileSize = multipartFile.getSize();
         log.info("@@@@@@@@@@@@@@@@@@@@@@@@@@ upload file size = {} KB", (fileSize / 1000));
-        if( fileSize > (policy.getUserUploadMaxFilesize() * 1000000l)) {
+        if( fileSize > (policy.getUserUploadMaxFilesize() * 1000000L)) {
             log.info("@@ fileSize = {}, user upload max filesize = {} M", (fileSize / 1000), policy.getUserUploadMaxFilesize());
             return "fileinfo.size.invalid";
         }
@@ -967,31 +964,31 @@ public class LayerRestController implements AuthorizationController {
 
         log.info("================================= browser = {}", browser);
         if (browser.equals("MSIE")) {
-            encodedFilename = URLEncoder.encode(filename, "UTF-8").replaceAll("\\+", "%20");
+            encodedFilename = URLEncoder.encode(filename, StandardCharsets.UTF_8).replaceAll("\\+", "%20");
         } else if (browser.equals("Trident")) {       // IE11 문자열 깨짐 방지
-            encodedFilename = URLEncoder.encode(filename, "UTF-8").replaceAll("\\+", "%20");
+            encodedFilename = URLEncoder.encode(filename, StandardCharsets.UTF_8).replaceAll("\\+", "%20");
         } else if (browser.equals("Firefox")) {
-            encodedFilename = "\"" + new String(filename.getBytes("UTF-8"), "8859_1") + "\"";
-            encodedFilename = URLDecoder.decode(encodedFilename, "UTF-8");
+            encodedFilename = "\"" + new String(filename.getBytes(StandardCharsets.UTF_8), "8859_1") + "\"";
+            encodedFilename = URLDecoder.decode(encodedFilename, StandardCharsets.UTF_8);
         } else if (browser.equals("Opera")) {
-            encodedFilename = "\"" + new String(filename.getBytes("UTF-8"), "8859_1") + "\"";
+            encodedFilename = "\"" + new String(filename.getBytes(StandardCharsets.UTF_8), "8859_1") + "\"";
         } else if (browser.equals("Chrome")) {
             StringBuffer sb = new StringBuffer();
             for (int i = 0; i < filename.length(); i++) {
                 char c = filename.charAt(i);
                 if (c > '~') {
-                    sb.append(URLEncoder.encode("" + c, "UTF-8"));
+                    sb.append(URLEncoder.encode("" + c, StandardCharsets.UTF_8));
                 } else {
                     sb.append(c);
                 }
             }
             encodedFilename = sb.toString();
         } else if (browser.equals("Safari")){
-            encodedFilename = "\"" + new String(filename.getBytes("UTF-8"), "8859_1")+ "\"";
-            encodedFilename = URLDecoder.decode(encodedFilename, "UTF-8");
+            encodedFilename = "\"" + new String(filename.getBytes(StandardCharsets.UTF_8), "8859_1")+ "\"";
+            encodedFilename = URLDecoder.decode(encodedFilename, StandardCharsets.UTF_8);
         }
         else {
-            encodedFilename = "\"" + new String(filename.getBytes("UTF-8"), "8859_1")+ "\"";
+            encodedFilename = "\"" + new String(filename.getBytes(StandardCharsets.UTF_8), "8859_1")+ "\"";
         }
 
         response.setHeader("Content-Disposition", dispositionPrefix + encodedFilename);
